# syntari-desktop

./: .cursorignore  .env.example  .eslintrc.cjs  .gitignore  CODEBASE_REVIEW_NOTES.md  CORE_EDITOR_TODO.md  DEVELOPER_TOOLS_FIX.md  DEVELOPMENT_STATUS.md  FEATURE_SUMMARY.md  FILE_SCANNING_DEBUG.md  FIXES_APPLIED.md  KEYBOARD_SHORTCUTS.md  LANGUAGE_SUPPORT_ROADMAP.md  MATERIAL_ICONS_DEMO.md  PHASE_1B_SEARCH_IMPLEMENTATION.md  PHASE_2A_DRAG_DROP_IMPLEMENTATION.md  QUICKOPEN_ARROW_KEY_ISSUES.md  README.md  SEARCH_FEATURE_DEMO.md  TERMINAL_RESIZE_FIX.md  ULTIMATE_TODO.md  dev-setup.sh  package-lock.json  package.json  renamed_file.txt  test_external_changes.sh  test_external_changes.txt  vite.config.ts  vitest.config.ts
docs/: FILE_ICON_SYSTEM.md
src/: App.css  App.tsx  index.css  main.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/ai/: commands.rs  mod.rs  providers.rs  router.rs  service.rs  types.rs
src-tauri/src/ai/context7/: commands.rs  mod.rs  service.rs
src-tauri/src/chat/: commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/core/: commands.rs  error.rs  errors.rs  file_utils.rs  mod.rs  state.rs  state_collections.rs  types.rs
src-tauri/src/filesystem/: commands.rs  git_commands.rs  mod.rs  scanner.rs  service.rs  watcher.rs
src-tauri/src/filesystem/commands/: dialog.rs  dir_ops.rs  file_ops.rs  mod.rs  scanning.rs  search.rs
src-tauri/src/project/: analyzer.rs  commands.rs  mod.rs  service.rs  types.rs
src-tauri/src/terminal/: commands.rs  mod.rs
src/components/: CodeEditor.tsx  ContextMenu.tsx  ErrorBoundary.tsx  Header.tsx  ProjectAIAssistant.tsx  QuickOpen.tsx  TabLayout.tsx  WelcomeScreen.tsx
src/components/TabLayout/: index.ts  types.ts
src/components/chat/: ChatView.tsx  index.ts
src/components/editor/: EditorFooter.tsx  EditorHeader.tsx  EditorLayout.tsx  EmptyEditorState.tsx  EnhancedMinimap.tsx  ErrorNotification.tsx  FileExplorer.tsx  FileExplorerViewer.tsx  FileTabBar.tsx  FileTabManager.tsx  GitStatusBar.tsx  GoToLineDialog.tsx  MonacoEditorAIAssistant.tsx  MonacoEditorWrapper.tsx  PerformanceMetrics.tsx  PerformanceModeIndicator.tsx  SimpleMonacoWrapper.tsx  TabContextMenu.tsx  UnsavedChangesDialog.tsx  VirtualizedFileExplorer.tsx  index.ts  useFileCache.ts  useFileLoader.ts  useFileSave.ts  usePerformanceConfig.ts
src/components/editor/dialogs/: NewFileDialog.tsx  NewFolderDialog.tsx  OpenFileDialog.tsx  SaveAsDialog.tsx  TemplateManagerDialog.tsx
src/components/editor/hooks/: index.ts  useEditorShortcuts.ts  useEditorState.ts  useFileOperations.ts  useMonacoAIAssistant.tsx  useTabManager.ts
src/components/editor/search/: SearchInput.tsx  SearchPanel.tsx  SearchResult.tsx  SearchResults.tsx  index.ts  useProjectSearch.ts
src/components/layout/: SettingsView.tsx  index.ts
src/components/notifications/: ProjectWatchNotification.tsx
src/components/terminal/: EnhancedTerminalPanel.tsx  OSTerminalTheme.tsx  TerminalAutoComplete.tsx  TerminalStatusBar.tsx  XTerminalPanel.tsx
src/components/testing/: FileIconViewer.tsx  IconSystemTest.tsx
src/components/ui/: ActionCard.tsx  BaseDialog.tsx  CommandPalette.tsx  ContextMenu.tsx  DirectoryBrowser.tsx  EnhancedFileIcon.tsx  ErrorScreen.tsx  FileIcon.tsx  GettingStartedSection.tsx  LoadingScreen.test.tsx  LoadingScreen.tsx  OutputPanel.tsx  PermissionRequestDialog.tsx  ProblemsPanel.tsx  RecentFilesList.tsx  RecentProjectsList.tsx  ResourceMonitoring.tsx  SearchReplacePanel.tsx  StatusBar.tsx  Terminal.tsx  TerminalPanel.tsx  index.ts
src/config/: app.config.ts  fileIconMap.ts  fileOperationShortcuts.json  fileTemplates.ts  keyboardShortcuts.json  monaco.config.ts
src/constants/: editorConfig.ts  monacoThemes.ts  welcomeData.ts
src/hooks/: useAppViewModel.ts  useBookmarks.ts  useChatViewModel.ts  useContextMenu.ts  useContextMenuIntegration.ts  useDialogKeyboard.ts  useEditorCommands.ts  useFileIcon.ts  useFileSystemWatcher.ts  useFileTabManager.ts  useKeyboardShortcuts.ts  useNewFolder.ts  useProjectReplace.ts  useRecentlyClosedTabs.ts  useServiceInitialization.ts  useWorkspaceSymbols.ts
src/hooks/chat/: useChatProvider.ts
src/services/: aiService.ts  chatService.ts  commandService.ts  contextMenuService.ts  costTrackingService.ts  fileManagementService.ts  fileSystemService.ts  gitService.ts  index.ts  languageService.ts  projectService.ts  searchService.ts  terminalService.ts  types.ts
src/styles/: animations.css  components.css  file-explorer.css  monaco-editor-enhancements.css  performance.css  responsive.css  scrollbars.css  typography.css  utilities.css  variables.css
src/test/: setup.ts
src/test/components/: LoadingScreen.test.tsx
src/test/mocks/: tauri-core.ts  tauri-dialog.ts
src/types/: chat.ts  core.ts  fileSystem.ts  index.ts
src/utils/: chatUtils.ts  editorUtils.ts  fileValidation.ts  keyboardUtils.ts  logger.test.ts  logger.ts
