[package]
name = "syntari-desktop"
version = "0.1.0"
description = "Syntari AI IDE - Enterprise AI Router Desktop Application"
authors = ["Syntari Team"]
license = "MIT"
repository = "https://github.com/syntari/syntari-desktop"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "syntari_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
# Tauri framework (desktop-only)
tauri = { version = "2.5.1", features = ["devtools"] }

# Dialog plugin for Tauri 2.x
tauri-plugin-dialog = "2.2.2"

# File system plugin for Tauri 2.x with permissions
tauri-plugin-fs = "2.2.2"

# PERFORMANCE: VS Code-style allocator (30-40% improvement)
mimalloc = { version = "0.1", default-features = false }

# PERFORMANCE: String interning (massive memory savings for file paths)
string-interner = "0.19.0"

# PERFORMANCE: File watching optimizations
notify = "8.0.0"

# PERFORMANCE: Rope data structure for large text files (like VS Code)
ropey = "1.6"

# PERFORMANCE: Fast text processing
regex = "1.11"

# Async runtime and utilities
tokio = { version = "1.45.1", features = ["full"] }
anyhow = "1.0.98"

# Serialization and data handling
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# UUID generation for unique IDs (with serde support)
uuid = { version = "1.17.0", features = ["v4", "serde"] }

# HTTP client for AI integrations
reqwest = { version = "0.12.18", features = ["json"] }

# File system operations
walkdir = "2.5.0"

# Git integration
git2 = { version = "0.20.2", optional = true }

# Encryption and security
ring = "0.17.14"
base64 = "0.22.1"

# Logging and tracing
tracing = "0.1.41"
tracing-subscriber = "0.3.19"

# Configuration management
config = "0.15.11"
dirs = "6.0.0"

# Time and date handling
chrono = { version = "0.4.41", features = ["serde"] }

# Aggressive filtering
ignore = "0.4.23"

# Parallel processing
rayon = "1.10.0"

# Local workspace dependencies
syntari-cli = { path = "../../syntari-cli" }
consensus_engine = { path = "../../kernel/consensus_engine" }

[features]
default = []
git-integration = ["git2"]
# Custom builds for enterprise features
enterprise = []
compliance = []

[profile.dev]
incremental = true # Compile in smaller steps for faster builds
opt-level = 1 # Basic optimizations for dev builds

[profile.release]
codegen-units = 1 # Better optimization
lto = true # Link-time optimizations
opt-level = 3 # Optimize for speed (important for large file scanning)
panic = "abort" # Faster performance by removing panic handlers
strip = true # Remove debug symbols
overflow-checks = false # Disable overflow checks for performance

